doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/Guest/Desktop/Number guess
-d
/Users/Guest/Desktop/Number guess/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ 3.1.5/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/Guest/Desktop/Number guess/Guess.java
<---- end of javadoc command ---->
Loading source file /Users/Guest/Desktop/Number guess/Guess.java...
/Users/Guest/Desktop/Number guess/Guess.java:13: error: invalid method declaration; return type required
    public Setup()
           ^
/Users/Guest/Desktop/Number guess/Guess.java:20: error: ';' expected
       System.out.println = ("Hello, welcome to the geussing game")
                                                                   ^
/Users/Guest/Desktop/Number guess/Guess.java:24: error: ';' expected
        	System.out.print = (", please type 'P' in the next box if you wish to play")//3.1   	Display Menu
        	                                                                            ^
3 errors
